# python-project-template

./: .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_REVIEW.md  PLAN.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml
.github/: dependabot.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: 01-bug.yml
.github/workflows/: ci.yaml  docs-pages.yaml  release-please.yaml  update-citation-date-released.yaml
architecture/: index.html
architecture/adr/: index.html
architecture/adr/001-use-architectural-decision-records/: index.html
architecture/adr/002-manage-dependencies-with-uv/: index.html
architecture/adr/template/: index.html
docs/: index.md  reference.md  requirements.txt
docs/architecture/adr/: 001-use-architectural-decision-records.md  002-manage-dependencies-with-uv.md  002-use-uv-to-manage-project-dependencies.md  index.md  template.md
docs/explanation/: index.md
docs/tutorials/: index.md
explanation/: index.html
how-to/: index.html
notebooks/: example.ipynb
package_name/: __init__.py  greet.py
plans/: README.md
reference/: index.html
scripts/: package_smoke_test.py
search/: search_index.json
tags/: index.html
tests/unit/: test_greet.py
tutorials/: index.html
