[project]
name = "package_name"
version = "0.5.0"
description = "A python package."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.1,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pyright (>=1.1.406,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material"
]


[tool.coverage.run]
source = ["package_name"]
omit = [
    "tests/*",
    "conftest.py"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
