[project]
name = "package_name"
version = "0.10.0"
description = "A python package."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "plotly>=6.8.0,<7.0.0",
    "numpy>=2.4.6,<3.0.0",
    "matplotlib (>=3.10.6,<4.0.0)",
    "nbmake>=1.5.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "ruff>=0.15.17,<0.16.0",
    "pre-commit>=4.6.0,<5.0.0",
    "pyright>=1.1.410,<2.0.0",
    "pytest-cov>=7.1.0,<8.0.0"
]

docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material"
]


[tool.coverage.run]
source = ["src/package_name"]
omit = [
    "tests/*",
    "conftest.py"
]

[build-system]
requires = ["uv-build>=0.11.30,<1.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "package_name"
module-root = "src"
